--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -1,45 +1,44 @@
 server {
-    listen 80;
-
+    listen 80; # Para o serviço 'php'
     index index.php;
+    root /var/www/public;
+
+    # ONDE A MAGIA ACONTECE: Tenta encontrar o arquivo. Se falhar, vai para index.php.
+    location / {
+        try_files $uri $uri/ /index.php?$query_string;
+    }
+
+    # Bloco para processar arquivos PHP
+    location ~ \.php$ {
+        fastcgi_pass php:9000; # Passa para o serviço 'php' (porta 9000)
+        fastcgi_index index.php;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        include fastcgi_params;
+    }
+    # Removi o bloco de arquivos estáticos, pois ele pode ser substituído por try_files.
 
     error_log /var/www/log/nginx/error.log;
     access_log /var/www/log/nginx/access.log;
-
-    root /var/www/public;
-
-    location / {
-        fastcgi_pass php:9000;
-        fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME $document_root/index.php;
-        include fastcgi_params;
-    }
-
-    location ~ /(.*)\.(css|js|jpeg|png|jpg)  {
-        try_files $uri =404
-        expires -1;
-    }
 }
 
 server {
-    listen 8080;
-
+    listen 8080; # Para o serviço 'php_test'
     index index.php;
-
-    error_log /var/www/log/nginx/error.log;
-    access_log /var/www/log/nginx/access.log;
-
     root /var/www/public;
 
+    # Tenta encontrar o arquivo. Se falhar, vai para index.php.
     location / {
-        fastcgi_pass php_test:9000;
+        try_files $uri $uri/ /index.php?$query_string;
+    }
+
+    # Bloco para processar arquivos PHP para testes
+    location ~ \.php$ {
+        fastcgi_pass php_test:9000; # Passa para o serviço 'php_test' (porta 9000)
         fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME $document_root/index.php;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         include fastcgi_params;
     }
 
-    location ~ /(.*)\.(css|js|jpeg|png|jpg)  {
-        try_files $uri =404
-        expires -1;
-    }
+    error_log /var/www/log/nginx/error.log;
+    access_log /var/www/log/nginx/access.log;
 }
