--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,20 @@
 {
-  "name": "root/app",
-  "autoload": {
-    "files": [
-      "core/helpers.php"
-    ],
-    "psr-4": {
-      "App\\": "app/",
-      "Tests\\": "tests/",
-      "Core\\": "core/",
-      "Database\\": "database/",
-      "Lib\\": "lib/",
-      "Config\\": "config/"
+    "name": "root/app",
+    "autoload": {
+        "files": [
+            "core/helpers.php"
+        ],
+        "psr-4": {
+            "App\\": "app/",
+            "Tests\\": "tests/",
+            "Core\\": "core/",
+            "Database\\": "database/",
+            "Lib\\": "lib/"
+        }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^11.1",
+        "squizlabs/php_codesniffer": "*",
+        "phpstan/phpstan": "^1.10"
     }
-  },
-  "require-dev": {
-    "phpunit/phpunit": "^11.1",
-    "squizlabs/php_codesniffer": "*",
-    "phpstan/phpstan": "^2.0",
-    "codeception/codeception": "^5.1",
-    "codeception/module-phpbrowser": "*",
-    "codeception/module-asserts": "*",
-    "codeception/module-webdriver": "^4.0"
-  }
 }
